--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="col-xs-12
                         col-sm-2
                         col-md-2
-                        col-lg-2">
+                        col-lg-2" align=center>
 
                 <h5>Luffy</h5>
                 <img class="myImg" src="image/Luffy.png" alt="Luffy" width="120" height="213">
@@ -181,7 +181,7 @@
             <div class="col-xs-12
                             col-sm-2
                             col-md-2
-                            col-lg-2">
+                            col-lg-2" align=center>
 
                 <h5>Zoro</h5>
                 <img class="myImg" src="image/Zoro.png" alt="Zoro" width="120" height="213">
@@ -197,7 +197,7 @@
             <div class="col-xs-12
                             col-sm-2
                             col-md-2
-                            col-lg-2">
+                            col-lg-2" align=center>
 
                 <h5>Usopp</h5>
                 <img class="myImg" src="image/Usopp.png" alt="Usopp" width="120" height="213">
@@ -213,7 +213,7 @@
             <div class="col-xs-12
                             col-sm-2
                             col-md-2
-                            col-lg-2">
+                            col-lg-2" align=center>
 
                 <h5>Nami</h5>
                 <img class="myImg" src="image/Nami.png" alt="Nami" width="120" height="213">
@@ -229,7 +229,7 @@
             <div class="col-xs-12
                             col-sm-2
                             col-md-2
-                            col-lg-2">
+                            col-lg-2" align=center>
                 
                 <h5>Franky</h5>
                 <img class="myImg" src="image/Franky.png" alt="Franky" width="213" height="213">
