--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         col-lg-12">
             <!-- Jumbotron example -->
             <!-- <div class="jumbotron jumbotron-fluid bubble"> -->
-            <div class="jumbotron jumbotron-fluid bubble" id="large-header">
+            <div class="jumbotron bubble" id="large-header">
             <!-- <div class="content"> -->
             <h1>Hi Im Weng !</h1>
             <h2>I Draw One Piece Fanart !</h2>
